Tidied up, change Runtime to ProcessBuilder